<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddStory.AddStory">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/previewImageView"
                android:layout_width="389dp"
                android:layout_height="330dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_place_holder" />

            <EditText
                android:id="@+id/editTextArea"
                android:layout_width="350dp"
                android:layout_height="160dp"
                android:layout_marginBottom="48dp"
                android:gravity="top|start"
                android:hint="@string/desc"
                android:inputType="textMultiLine"
                android:padding="10dp"
                style="@style/EditTextWithBorder"
                app:layout_constraintBottom_toTopOf="@+id/uploadButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:importantForAutofill="no" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.499" />

            <Button
                android:id="@+id/cameraButton"
                android:layout_width="134dp"
                android:layout_height="44dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/navy"
                android:text="@string/camera"
                app:layout_constraintBottom_toTopOf="@+id/editTextArea"
                app:layout_constraintEnd_toStartOf="@+id/galleryButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/previewImageView"
                app:layout_constraintVertical_bias="0.057" />

            <Button
                android:id="@+id/galleryButton"
                android:layout_width="134dp"
                android:layout_height="44dp"
                android:layout_marginEnd="44dp"
                android:backgroundTint="@color/navy"
                android:text="@string/gallery"
                app:layout_constraintBottom_toTopOf="@+id/editTextArea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/previewImageView"
                app:layout_constraintVertical_bias="0.045"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/navy"
                android:text="@string/upload"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="350dp"
                android:layout_height="29dp"
                android:textSize="16sp"
                android:text="@string/switch_story"
                app:layout_constraintBottom_toTopOf="@+id/editTextArea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/previewImageView"
                app:layout_constraintVertical_bias="0.745"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
